--- a/ensemble_tools/lhs_test_080723.ipynb
+++ b/ensemble_tools/lhs_test_080723.ipynb
@@ -10,14 +10,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "6b4b7a37-1801-4033-bfbd-4de9eebc4c55",
    "metadata": {},
    "outputs": [],
    "source": [
     "from scipy.stats import qmc\n",
     "import numpy as np\n",
-    "\n",
     "import csv\n",
     "import pandas as pd\n",
     "import os\n",
@@ -29,13 +28,12 @@
     "import tempfile \n",
     "import random\n",
     "import re\n",
-    "\n",
-    "import functions_py.modp as mp\n"
+    "import modp as mp"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "168bc2f6-3403-45ad-9a0f-40617907f584",
    "metadata": {},
    "outputs": [],
@@ -49,9 +47,29 @@
    "metadata": {},
    "source": [
     "#### Read in min and max values for each parameter and pft \n",
-    "- adapted from work by Rachel Ward (parameter ranges and inequalities). \n",
-    "- Where there are inequalities between PFTs, sample PFT 1 parameter and then use a scalar to generate PFT 2 parameter. If parameter ranges are the same ignore the inequality\n",
-    "- Sample the scalars as parameters to avoid assuming a fixed relationship between PFTs. "
+    "- Adapted from work by Rachel Ward (parameter ranges and inequalities). \n",
+    "- Where there are inequalities between PFTx and PFTy, sample PFTx parameter and then use a scalar to generate PFTy parameter. -- If parameter ranges are the same ignore the inequality\n",
+    "- Add some noise to the inequalities so that inter-PFT trait correlations are not too strict"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "be8d4a7d-c197-4549-986a-2bfc2e5bc4d7",
+   "metadata": {},
+   "source": [
+    "### Some parameters are help equal for all conifers\n",
+    "\n",
+    "There are some parameters that we keep equal among the conifers. We want the value pulled for pine from the Latin hypercube to apply to all conifers."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "1782958f-d285-4b9a-9de4-c70716ffd759",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "equal_among_conifers = [\"fates_recruit_seed_alloc\",\"fates_recruit_seed_alloc_mature\"]"
    ]
   },
   {
@@ -182,6 +200,14 @@
     "            val = val * 0.9\n",
     "            mp.main(var = var, pft = pft, fin = fout, val = val, \n",
     "                    fout = fout, O = 1, organ = organ)\n",
+    "            \n",
+    "            \n",
+    "        #parameters that vary as a group (i.e. conifers)\n",
+    "        # if var == 'fates_recruit_seed_alloc' and pft == 0 :\n",
+    "        #     for p in [1,2]:\n",
+    "        #         pft = p\n",
+    "        #         mp.main(var = var, pft = p, fin = fout, val = val, \n",
+    "        #             fout = fout, O = 1, organ = organ)\n",
     "\n",
     "            \n",
     "    "
@@ -245,9 +271,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "NERSC Python",
+   "display_name": "env4_work",
    "language": "python",
-   "name": "python3"
+   "name": "env4_work"
   },
   "language_info": {
    "codemirror_mode": {
@@ -259,7 +285,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
