cleaned up lhs script

--- a/ensemble_tools/lhs_test_080723.ipynb
+++ b/ensemble_tools/lhs_test_080723.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 48,
    "id": "6b4b7a37-1801-4033-bfbd-4de9eebc4c55",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 49,
    "id": "c1b2c9aa-8737-4a7c-bd0d-6806290128b0",
    "metadata": {},
    "outputs": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 53,
    "id": "5751d5a4-d040-43da-bdde-feb479677f12",
    "metadata": {},
    "outputs": [
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 54,
    "id": "5ef80f9c-43a4-4a94-ba0f-e92d8e3f8005",
    "metadata": {},
    "outputs": [
@@ -159,7 +159,7 @@
        "Name: 0, dtype: float64"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 52,
    "id": "1782958f-d285-4b9a-9de4-c70716ffd759",
    "metadata": {},
    "outputs": [],
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 55,
    "id": "4e351416-8bc9-47a2-b13e-1f6731086e95",
    "metadata": {},
    "outputs": [],
@@ -243,10 +243,10 @@
     "# for each sample \n",
     "for i in range(0,n_inst) :\n",
     "    \n",
-    "    #param_file_end = str(i).rjust(4, '0')\n",
+    "    param_file_end = str(i).rjust(4, '0')\n",
     "    \n",
     "    # final parameter file name\n",
-    "    fout = '/glade/u/home/adamhb/ahb_params/fates_api_25/ensembles/test_ensemble_080723/ca_ahb_5pfts_080623_{0}.nc'.format(i)\n",
+    "    fout = '/glade/u/home/adamhb/ahb_params/fates_api_25/ensembles/test_ensemble_080723/ca_ahb_5pfts_080623_{0}.nc'.format(param_file_end)\n",
     "    \n",
     "    shutil.copyfile(input_fname, fout)                                                                                                                             \n",
     "   \n",
@@ -304,40 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "id": "f3baf031-953f-4578-8d88-707dcad16e39",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<scipy.io._netcdf.netcdf_variable object at 0x7fc5008ad730>\n",
-      "None\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/glade/scratch/adamhb/ipykernel_67801/591288635.py:2: DeprecationWarning: Please use `netcdf_file` from the `scipy.io` namespace, the `scipy.io.netcdf` namespace is deprecated.\n",
-      "  ncfile = nc.netcdf_file(file, 'a')\n"
-     ]
-    }
-   ],
-   "source": [
-    "def get_var_from_netcdf(file,var):\n",
-    "    ncfile = nc.netcdf_file(file, 'a')\n",
-    "    var = ncfile.variables[var]\n",
-    "    print(var)\n",
-    "    \n",
-    "var = get_var_from_netcdf('/glade/u/home/adamhb/ahb_params/fates_api_25/ensembles/test_ensemble_080723/ca_ahb_5pfts_080623_0.nc','fates_leaf_vcmax25top')\n",
-    "print(var)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 56,
    "id": "ffd5e0ab-2d42-4e4d-9bc1-346b203e872a",
    "metadata": {},
    "outputs": [
@@ -370,7 +337,7 @@
     "            raise ValueError(f\"'{variable_name}' not found in the NetCDF file.\")\n",
     "\n",
     "# Usage\n",
-    "file_path = '/glade/u/home/adamhb/ahb_params/fates_api_25/ensembles/test_ensemble_080723/ca_ahb_5pfts_080623_0.nc'\n",
+    "file_path = '/glade/u/home/adamhb/ahb_params/fates_api_25/ensembles/test_ensemble_080723/ca_ahb_5pfts_080623_0000.nc'\n",
     "variable_name = 'fates_leaf_vcmax25top'\n",
     "data = extract_variable_from_netcdf(file_path, variable_name)\n",
     "#dim: (organ,pft)\n",
