updates to run script and lhs script

--- a/ensemble_tools/lhs_test_080723.ipynb
+++ b/ensemble_tools/lhs_test_080723.ipynb
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 57,
    "id": "4e351416-8bc9-47a2-b13e-1f6731086e95",
    "metadata": {},
    "outputs": [],
@@ -243,7 +243,9 @@
     "# for each sample \n",
     "for i in range(0,n_inst) :\n",
     "    \n",
-    "    param_file_end = str(i).rjust(4, '0')\n",
+    "    param_file_end = str(i+1).rjust(4, '0')\n",
+    "    \n",
+    "    print(param_file_end)\n",
     "    \n",
     "    # final parameter file name\n",
     "    fout = '/glade/u/home/adamhb/ahb_params/fates_api_25/ensembles/test_ensemble_080723/ca_ahb_5pfts_080623_{0}.nc'.format(param_file_end)\n",
