3rd oak sim, updates to parameter range file

--- a/parameter_ranges/analyze_oak_trait_data.ipynb
+++ b/parameter_ranges/analyze_oak_trait_data.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 1,
    "id": "ba823db8",
    "metadata": {},
    "outputs": [],
@@ -35,13 +35,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "id": "d8fbcb27",
    "metadata": {},
    "outputs": [],
    "source": [
     "path_to_trait_obs = \"/home/adam/cloud/gdrive/postdoc/parameters/param_data/trait_observations\"\n",
-    "write_QUKE_data_avail = False\n",
+    "write_QUKE_data_avail = True\n",
     "write_to_csv = True"
    ]
   },
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "id": "a7b322b2",
    "metadata": {},
    "outputs": [],
@@ -167,10 +167,110 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "id": "bb930a7a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[42, 26, 3117, 3106, 37, 14, 604, 50, 38, 15, 8, 17, 609, 51, 3114, 43, 197, 59, 22, 679, 335, 224, 223, 222, 31, 938, 937, 28, 2815, 603, 593, 825, 677, 61, 30, 4, 600, 318, 3113, 1251, 218, 963, 602, 2881, 940, 601, 56, 143, 759, 145, 583, 939, 582, 596, 170, 595, 1254, 169, 172, 611, 98, 598, 610, 409, 838, 6, 613, 231, 207, 581, 597, 605, 585, 586, 3112, 3109, 3115, 16, 55, 933, 57, 154, 2, 7, 346, 3401, 3400, 587, 599, 819, 171]\n",
+      "                                                trait  trait_id   n\n",
+      "46                                  Plant growth form        42  79\n",
+      "63                                      Seed dry mass        26  19\n",
+      "14  Leaf area per leaf dry mass (specific leaf are...      3117  17\n",
+      "50                            Plant height vegetative      3106  16\n",
+      "31                                Leaf phenology type        37  16\n",
+      "28        Leaf nitrogen (N) content per leaf dry mass        14  15\n",
+      "51                            Plant human usage types       604  13\n",
+      "27            Leaf nitrogen (N) content per leaf area        50  13\n",
+      "61                                    Plant woodiness        38  11\n",
+      "33      Leaf phosphorus (P) content per leaf dry mass        15  11\n",
+      "54                Plant nitrogen(N) fixation capacity         8  10\n",
+      "16                                  Leaf compoundness        17  10\n",
+      "56                             Plant propagation type       609   9\n",
+      "32          Leaf phosphorus (P) content per leaf area        51   9\n",
+      "9   Leaf area (in case of compound leaves undefine...      3114   9\n",
+      "37                                          Leaf type        43   8\n",
+      "45                        Plant functional type (PFT)       197   7\n",
+      "52                         Plant lifespan (longevity)        59   6\n",
+      "43                             Photosynthesis pathway        22   6\n",
+      "55                                 Plant palatability       679   5\n",
+      "57  Plant reproductive phenology timing (flowering...       335   4\n",
+      "69          Species genotype: chromosome cDNA content       224   4\n",
+      "70                Species genotype: chromosome number       223   4\n",
+      "71                Species genotype: chromosome ploidy       222   4\n",
+      "80                         Species tolerance to frost        31   4\n",
+      "22          Leaf isoprene emission rate per leaf area       938   4\n",
+      "21                    Leaf isoprene emission category       937   3\n",
+      "1                                  Dispersal syndrome        28   3\n",
+      "38  Leaf volatile organic carbon (VOC): other than...      2815   3\n",
+      "84                         Species tolerance to shade       603   3\n",
+      "74  Species habitat characterisation / Plant requi...       593   3\n",
+      "75             Species occurrence range: climate type       825   3\n",
+      "20  Leaf emergences (pubescence, pruinescence, hai...       677   3\n",
+      "85                  Species tolerance to waterlogging        61   3\n",
+      "78                       Species tolerance to drought        30   3\n",
+      "89  Stem specific density (SSD, stem dry mass per ...         4   3\n",
+      "73  Species habitat characterisation / Plant requi...       600   2\n",
+      "79                          Species tolerance to fire       318   2\n",
+      "12  Leaf area (in case of compound leaves: leaflet...      3113   2\n",
+      "59        Plant vegetative phenology (leaf phenology)      1251   2\n",
+      "76       Species occurrence range: native vs invasive       218   2\n",
+      "25                                   Leaf margin type       963   2\n",
+      "72  Species habitat characterisation / Plant requi...       602   2\n",
+      "41  Litter (other than leaf: twigs, bark, flowers....      2881   2\n",
+      "24  Leaf length excluding petiole (leaf lamina len...       940   2\n",
+      "82              Species tolerance to planting density       601   2\n",
+      "29               Leaf nitrogen/phosphorus (N/P) ratio        56   2\n",
+      "30                                Leaf petiole length       143   2\n",
+      "40                            Leaflet number per leaf       759   2\n",
+      "39                                         Leaf width       145   2\n",
+      "34                                      Leaf porosity       583   2\n",
+      "23      Leaf isoprene emission rate per leaf dry mass       939   2\n",
+      "15                                         Leaf color       582   2\n",
+      "64                       Seed germination requirement       596   1\n",
+      "86  Stem conduit cross-sectional area (vessels and...       170   1\n",
+      "77                         Species tolerance to CaCO3       595   1\n",
+      "83                          Species tolerance to salt      1254   1\n",
+      "87       Stem conduit density (vessels and tracheids)       169   1\n",
+      "88  Stem conduit lumen cross-sectional area (vesse...       172   1\n",
+      "67                                     Seedling vigor       611   1\n",
+      "66                             Seed storage behaviour        98   1\n",
+      "81                        Species tolerance to hedges       598   1\n",
+      "65                                   Seed spread rate       610   1\n",
+      "68                  Shoot carbon/nitrogen (C/N) ratio       409   1\n",
+      "0                Bark surface structure, texture, age       838   1\n",
+      "62                                 Root rooting depth         6   1\n",
+      "60         Plant vegetative reproduction: spread rate       613   1\n",
+      "2                                 Dispersal unit type       231   1\n",
+      "3                                        Flower color       207   1\n",
+      "4                                  Flower conspicuous       581   1\n",
+      "5   Flowering requirement (requirement for fertility)       597   1\n",
+      "6                                Fruit/seed abundance       605   1\n",
+      "7                                    Fruit/seed color       585   1\n",
+      "8                              Fruit/seed conspicuous       586   1\n",
+      "10  Leaf area (in case of compound leaves: leaf, u...      3112   1\n",
+      "11  Leaf area (in case of compound leaves: leaflet...      3109   1\n",
+      "13  Leaf area per leaf dry mass (specific leaf are...      3115   1\n",
+      "17  Leaf distribution along the shoot axis (arrang...        16   1\n",
+      "18                        Leaf dry mass (single leaf)        55   1\n",
+      "19          Leaf dry mass loss during leaf senescence       933   1\n",
+      "26                 Leaf nitrogen (N) content per leaf        57   1\n",
+      "35                                         Leaf shape       154   1\n",
+      "36  Leaf texture (sclerophylly, physical strength,...         2   1\n",
+      "42                                    Mycorrhiza type         7   1\n",
+      "44                 Plant defence mechanisms: chemical       346   1\n",
+      "47            Plant growth form detailed consolidated      3401   1\n",
+      "48              Plant growth form simple consolidated      3400   1\n",
+      "49                                  Plant growth rate       587   1\n",
+      "53                            Plant moisture use type       599   1\n",
+      "58                         Plant resprouting capacity       819   1\n",
+      "90  Stem, branch or twig sapwood cross-sectional a...       171   1\n"
+     ]
+    }
+   ],
    "source": [
     "#clean data\n",
     "QUKE_data_avail = os.path.join(path_to_trait_obs,\"QUKE/TRY/QUKE_TRY_obs_availability.txt\")\n",
@@ -184,7 +284,7 @@
     "    #get trait IDs available for QUKE\n",
     "    print(list(QUKE_df.trait_id))\n",
     "\n",
-    "    print(QUKE_df.head(20))"
+    "    print(QUKE_df)"
    ]
   },
   {
