--- a/ensemble_tools/lhs_conifer_allometry_v2.ipynb
+++ b/ensemble_tools/lhs_conifer_allometry_v2.ipynb
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 19,
    "id": "ffd5e0ab-2d42-4e4d-9bc1-346b203e872a",
    "metadata": {},
    "outputs": [
@@ -348,7 +348,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.65919188 0.65919188 0.65919188]\n"
+      "[60.45702073 51.97182484 39.244031  ]\n",
+      "2\n"
      ]
     }
    ],
@@ -373,11 +374,13 @@
     "            raise ValueError(f\"'{variable_name}' not found in the NetCDF file.\")\n",
     "\n",
     "# Usage\n",
-    "file_path = '/glade/u/home/adamhb/ahb_params/fates_api_25/ensembles/conifer_allom_082323e/conifer_allom_082323e_0002.nc'\n",
-    "variable_name = 'fates_allom_d2ca_coefficient_max'\n",
+    "file_path = '/glade/u/home/adamhb/ahb_params/fates_api_25/ensembles/conifer_allom_083023/conifer_allom_083023_0006.nc'\n",
+    "variable_name = 'fates_leaf_vcmax25top'\n",
+    "#variable_name = 'fates_allom_d2ca_coefficient_max'\n",
     "data = extract_variable_from_netcdf(file_path, variable_name)\n",
     "#dim: (organ,pft)\n",
-    "print(data)"
+    "print(data[0,:])\n",
+    "print(len(data.shape))"
    ]
   },
   {
