updated param ranges

--- a/ensemble_tools/lhs_5pft_091923.ipynb
+++ b/ensemble_tools/lhs_5pft_091923.ipynb
@@ -45,6 +45,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "20439224",
+   "metadata": {},
+   "source": [
+    "### Pre-process param ranges file"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "id": "c1b2c9aa-8737-4a7c-bd0d-6806290128b0",
@@ -72,7 +80,8 @@
     }
    ],
    "source": [
-    "param_ranges_full = pd.read_csv('/glade/u/home/adamhb/california-fates/parameter_ranges/param_ranges_conifer_allom_test_090123_5pfts.csv')\n",
+    "path_to_ca_fates = '/home/adam/cloud/gdrive/postdoc/california-fates'\n",
+    "param_ranges_full = pd.read_csv(os.path.join(path_to_ca_fates,'parameter_ranges/param_ranges.csv')\n",
     "param_ranges = param_ranges_full[['param', 'value_min', 'value_max', 'pft', 'organ']]\n",
     "\n",
     "# number of parameters\n",
