added new history vars

--- a/ensemble_tools/lhs_5pft_091923.ipynb
+++ b/ensemble_tools/lhs_5pft_091923.ipynb
@@ -93,15 +93,18 @@
     }
    ],
    "source": [
-    "path_to_ca_fates = '/home/adam/cloud/gdrive/postdoc/california-fates'\n",
-    "path_to_base_param_files_root = '/home/adam/cloud/gdrive/postdoc/parameters/'\n",
-    "path_to_ensemble_param_files_root = '/home/adam/cloud/gdrive/postdoc/parameters/ensemble_params_test'\n",
-    "pft_names = ['pine','cedar','fir','shrub','oak']\n",
-    "base_param_file_name = 'ca_ahb_5pfts_090123.nc'\n",
-    "param_files_subdir = 'testing_091923'\n",
-    "n_inst = 36\n",
+    "#path_to_ca_fates = '/home/adam/cloud/gdrive/postdoc/california-fates'\n",
+    "path_to_ca_fates = '/glade/u/home/adamhb/california-fates'\n",
+    "#path_to_base_param_files_root = '/home/adam/cloud/gdrive/postdoc/parameters/'\n",
+    "path_to_base_param_files_root = '/glade/u/home/adamhb/ahb_params/fates_api_25'\n",
+    "#path_to_ensemble_param_files_root = '/home/adam/cloud/gdrive/postdoc/parameters/ensemble_params_test'\n",
+    "path_to_ensemble_param_files_root = '/glade/u/home/adamhb/ahb_params/fates_api_25/ensembles/'\n",
     "\n",
-    "#path_to_ensemble_param_files_root = '/glade/u/home/adamhb/ahb_params/fates_api_25/ensembles'\n",
+    "pft_names = ['pine','cedar','fir','shrub','oak']\n",
+    "base_param_file_name = 'ca_ahb_5pfts_092123.nc'\n",
+    "param_files_subdir = 'ca_ahb_5pfts_092123'\n",
+    "n_inst = 108\n",
+    "\n",
     "\n",
     "param_ranges_full = pd.read_csv(os.path.join(path_to_ca_fates,'parameter_ranges/param_ranges_091923.csv'))\n",
     "param_ranges_full = param_ranges_full[['pft_ineq','param', 'value_min', 'value_max', 'pft', 'organ']]\n",
@@ -858,13 +861,7 @@
       "fates_allom_agb1\n",
       "/home/adam/cloud/gdrive/postdoc/parameters/ensemble_params_test/testing_091923/ca_5pfts_091923_0009.nc\n",
       "fates_recruit_seed_alloc_mature\n",
-      "fates_recruit_seed_alloc_mature\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "fates_recruit_seed_alloc_mature\n",
       "fates_fire_alpha_SH\n",
       "fates_fire_alpha_SH\n",
       "fates_fire_bark_scaler\n",
@@ -1196,13 +1193,7 @@
       "fates_fire_alpha_SH\n",
       "fates_fire_alpha_SH\n",
       "fates_fire_bark_scaler\n",
-      "fates_fire_bark_scaler\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "fates_fire_bark_scaler\n",
       "fates_fire_crown_kill\n",
       "fates_fire_crown_kill\n",
       "fates_mort_bmort\n",
@@ -1529,13 +1520,7 @@
       "fates_recruit_seed_alloc_mature\n",
       "fates_fire_alpha_SH\n",
       "fates_fire_alpha_SH\n",
-      "fates_fire_bark_scaler\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "fates_fire_bark_scaler\n",
       "fates_fire_bark_scaler\n",
       "fates_fire_crown_kill\n",
       "fates_fire_crown_kill\n",
@@ -1866,13 +1851,7 @@
       "fates_fire_bark_scaler\n",
       "fates_fire_bark_scaler\n",
       "fates_fire_crown_kill\n",
-      "fates_fire_crown_kill\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "fates_fire_crown_kill\n",
       "fates_mort_bmort\n",
       "fates_mort_bmort\n",
       "fates_leaf_slatop\n",
@@ -2110,9 +2089,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "env4",
+   "display_name": "env4_work",
    "language": "python",
-   "name": "env4"
+   "name": "env4_work"
   },
   "language_info": {
    "codemirror_mode": {
