updated parameter ranges between ensemble 1 and 2

--- a/parameter_ranges/analyze_conifer_trait_data.ipynb
+++ b/parameter_ranges/analyze_conifer_trait_data.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "id": "ba823db8",
    "metadata": {},
    "outputs": [],
@@ -21,6 +21,7 @@
     "from datetime import datetime\n",
     "pd.set_option('display.max_rows', 400)\n",
     "pd.set_option('display.min_rows', 400)\n",
+    "from matplotlib import pyplot as plt\n",
     "\n",
     "#define constants\n",
     "m2_per_cm2 = 1e-4\n",
@@ -35,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "d8fbcb27",
    "metadata": {},
    "outputs": [],
@@ -46,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "28669341",
    "metadata": {},
    "outputs": [],
@@ -64,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "id": "a7b322b2",
    "metadata": {},
    "outputs": [],
@@ -172,7 +173,23 @@
     "\n",
     "    summary_stats['subset_name'] = subset_name\n",
     "    \n",
-    "    return summary_stats"
+    "    return summary_stats\n",
+    "\n",
+    "import numpy as np\n",
+    "\n",
+    "def calculate_percentiles(data, percentiles):\n",
+    "    \"\"\"\n",
+    "    Calculate the specified percentiles of a dataset.\n",
+    "\n",
+    "    :param data: list or ndarray, the dataset\n",
+    "    :param percentiles: list of floats, the percentiles to compute, e.g., [25, 50, 75]\n",
+    "    :return: dictionary of percentiles and their corresponding values\n",
+    "    \"\"\"\n",
+    "    results = {}\n",
+    "    for p in percentiles:\n",
+    "        value = np.percentile(data, p)\n",
+    "        results[p] = value\n",
+    "    return results"
    ]
   },
   {
@@ -185,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 28,
    "id": "4a4ffcf4",
    "metadata": {},
    "outputs": [
@@ -228,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 29,
    "id": "d3f5f7dc",
    "metadata": {},
    "outputs": [],
@@ -246,34 +263,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 33,
    "id": "64ca42aa",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "Index: 518 entries, 9 to 24154\n",
-      "Data columns (total 6 columns):\n",
-      " #   Column          Non-Null Count  Dtype  \n",
-      "---  ------          --------------  -----  \n",
-      " 0   AccSpeciesName  518 non-null    object \n",
-      " 1   TraitName       518 non-null    object \n",
-      " 2   OrigValueStr    518 non-null    object \n",
-      " 3   OrigUnitStr     512 non-null    object \n",
-      " 4   StdValue        494 non-null    float64\n",
-      " 5   UnitName        494 non-null    object \n",
-      "dtypes: float64(1), object(5)\n",
-      "memory usage: 28.3+ KB\n"
-     ]
+     "data": {
+      "text/plain": [
+       "TraitName\n",
+       "Leaf area per leaf dry mass (specific leaf area, SLA or 1/LMA): undefined if petiole is in- or excluded    256\n",
+       "Xylem hydraulic vulnerability, xylem cavitation vulnerability, embolism vulnerability, (P20, P50, P80)     100\n",
+       "Leaf area per leaf dry mass (specific leaf area, SLA or 1/LMA): petiole excluded                            89\n",
+       "Stem specific density (SSD, stem dry mass per stem fresh volume) or wood density                            69\n",
+       "Leaf nitrogen (N) content per leaf area                                                                     31\n",
+       "Photosynthesis carboxylation capacity (Vcmax) per leaf area (Farquhar model)                                 2\n",
+       "Leaf lifespan (longevity)                                                                                    2\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# Filter to get traits of interest\n",
     "fates_relevant_traits = ['Stem specific density (SSD, stem dry mass per stem fresh volume) or wood density',\n",
     "                         'Leaf nitrogen (N) content per leaf dry mass',\n",
+    "                         'Leaf nitrogen (N) content per leaf area',\n",
     "                         #'Bark thickness',\n",
     "                         'Leaf area per leaf dry mass (specific leaf area, SLA or 1/LMA): undefined if petiole is in- or excluded',\n",
     "                         'Leaf area per leaf dry mass (specific leaf area, SLA or 1/LMA): petiole excluded',\n",
@@ -282,84 +299,42 @@
     "                         'Xylem hydraulic vulnerability, xylem cavitation vulnerability, embolism vulnerability, (P20, P50, P80)']\n",
     "\n",
     "try_df = try_df_raw[try_df_raw.TraitName.isin(fates_relevant_traits)]\n",
-    "try_df.info()"
+    "try_df.TraitName.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5e19204c",
+   "metadata": {},
+   "source": [
+    "### Get estimate of leaf nitrogen from leaf nitrogen per area"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 40,
    "id": "5301932e",
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>AccSpeciesName</th>\n",
-       "      <th>TraitName</th>\n",
-       "      <th>OrigValueStr</th>\n",
-       "      <th>OrigUnitStr</th>\n",
-       "      <th>StdValue</th>\n",
-       "      <th>UnitName</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>24125</th>\n",
-       "      <td>Abies concolor</td>\n",
-       "      <td>Leaf lifespan (longevity)</td>\n",
-       "      <td>7.7</td>\n",
-       "      <td>year</td>\n",
-       "      <td>92.4</td>\n",
-       "      <td>month</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24135</th>\n",
-       "      <td>Pinus ponderosa</td>\n",
-       "      <td>Leaf lifespan (longevity)</td>\n",
-       "      <td>3</td>\n",
-       "      <td>year</td>\n",
-       "      <td>36.0</td>\n",
-       "      <td>month</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "        AccSpeciesName                  TraitName OrigValueStr OrigUnitStr  \\\n",
-       "24125   Abies concolor  Leaf lifespan (longevity)          7.7        year   \n",
-       "24135  Pinus ponderosa  Leaf lifespan (longevity)            3        year   \n",
-       "\n",
-       "       StdValue UnitName  \n",
-       "24125      92.4    month  \n",
-       "24135      36.0    month  "
+       "{85: 0.046087210065167,\n",
+       " 90: 0.0465211635940981,\n",
+       " 95: 0.0498040957295726,\n",
+       " 98: 0.05235146694004941}"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "try_df.loc[try_df['TraitName'].str.contains('Leaf life')]"
+    "g_n_per_gC = try_df.loc[try_df['TraitName'].str.contains('nitrogen')][\"StdValue\"] * 0.010\n",
+    "#g_n_per_m2_leaf\n",
+    "\n",
+    "calculate_percentiles(g_n_per_gC,[85,90,95,98])"
    ]
   },
   {
@@ -372,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "7066073c",
    "metadata": {},
    "outputs": [
@@ -380,13 +355,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_8967/4023397515.py:3: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_6654/4023397515.py:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  try_df['fates_value'] = fates_values\n",
-      "/tmp/ipykernel_8967/4023397515.py:7: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_6654/4023397515.py:7: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -407,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "id": "7d2e934a",
    "metadata": {},
    "outputs": [
@@ -422,7 +397,7 @@
        "       'Leaf lifespan (longevity)'], dtype=object)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -433,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "ea1aba4c",
    "metadata": {},
    "outputs": [],
@@ -458,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "af0569dd",
    "metadata": {
     "scrolled": true
@@ -507,6 +482,33 @@
     "for p in param_vars:\n",
     "    print(p)\n",
     "    print(PIPO_df.loc[PIPO_df['fates_name'].str.contains(p)].describe())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "d76686e6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{80: 0.01317679234368,\n",
+       " 85: 0.014330812676899998,\n",
+       " 90: 0.01519182041664,\n",
+       " 95: 0.016952663265931214,\n",
+       " 96: 0.017241379310353647,\n",
+       " 97: 0.01764018691585446,\n",
+       " 98: 0.019637883008360016}"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "calculate_percentiles(PIPO_df.loc[PIPO_df['fates_name'] == \"fates_leaf_slatop\"][\"fates_value\"],[80,85,90,95,96,97,98])"
    ]
   },
   {
