--- a/ensemble_tools/old/lhs_5pft_100223.ipynb
+++ b/ensemble_tools/old/lhs_5pft_100223.ipynb
@@ -58,6 +58,34 @@
   },
   {
    "cell_type": "markdown",
+   "id": "41b5e256-d0a3-4e6a-9657-bf46eb84d12e",
+   "metadata": {},
+   "source": [
+    "## User-defined params"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "59bcd97f-909a-4181-9361-07bb825ec420",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# The parameter file used for parameter values that don't vary in the ensemble \n",
+    "base_param_file_name = 'ca_5pfts_091923.nc'\n",
+    "\n",
+    "# Subdir where param files for ensemble are kept\n",
+    "param_files_subdir = 'ca_ahb_5pfts_100523'\n",
+    "\n",
+    "# Number of instances\n",
+    "n_inst = 5004\n",
+    "\n",
+    "# Path to parameter ranges\n",
+    "param_ranges_full = pd.read_csv(os.path.join(path_to_ca_fates,'parameter_ranges/param_range_archive/param_ranges_100223.csv'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "20439224",
    "metadata": {},
    "source": [
@@ -102,13 +130,7 @@
     "path_to_ensemble_param_files_root = '/glade/u/home/adamhb/ahb_params/fates_api_25/ensembles/'\n",
     "\n",
     "pft_names = ['pine','cedar','fir','shrub','oak']\n",
-    "base_param_file_name = 'ca_ahb_5pfts_092123.nc'\n",
     "\n",
-    "\n",
-    "param_files_subdir = 'ca_ahb_5pfts_100223'\n",
-    "n_inst = 216\n",
-    "\n",
-    "param_ranges_full = pd.read_csv(os.path.join(path_to_ca_fates,'parameter_ranges/param_range_archive/param_ranges_100223.csv'))\n",
     "param_ranges_full = param_ranges_full[['pft_ineq','param', 'value_min', 'value_max', 'pft', 'organ']]\n",
     "\n",
     "# Filter to params that we are going to sample from the LHS\n",
