--- a/ensemble_tools/lhs_multicase.ipynb
+++ b/ensemble_tools/lhs_multicase.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "id": "6b4b7a37-1801-4033-bfbd-4de9eebc4c55",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "id": "a78bfb80",
    "metadata": {},
    "outputs": [],
@@ -14142,9 +14142,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "env4_work",
+   "display_name": "env4",
    "language": "python",
-   "name": "env4_work"
+   "name": "env4"
   },
   "language_info": {
    "codemirror_mode": {
