made aggregated metrics

--- a/benchmarks/aggregate_single_site_metrics.ipynb
+++ b/benchmarks/aggregate_single_site_metrics.ipynb
@@ -96,9 +96,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "db3c0a99-d131-45ab-91f7-6643830ca18d",
+   "metadata": {},
+   "source": [
+    "## Clean STAN PEAS metrics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "9aa36c9f-07b3-4c32-a926-a09f0ee0aa6e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "STAN_PEAS_metrics = pd.read_csv('/glade/scratch/adamhb/processed_output/STAN_equilibrium_111023_01_-17e2acb6a_FATES-8a054a12/ensemble_output_STAN_equilibrium_111023_01_-17e2acb6a_FATES-8a054a12_with_fire_metrics.csv')\n",
+    "STAN_PEAS_metrics = STAN_PEAS_metrics.sort_values(\"inst_id\")[CZ2_trans_metrics_cols]\n",
+    "STAN_PEAS_metrics.to_csv('STAN_PEAS_metrics.csv')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3e281a84-8f55-4c8c-8863-f3376523f076",
+   "id": "0b404412-2eb5-4bb7-ba61-c7553f31ea65",
    "metadata": {},
    "outputs": [],
    "source": []
