--- a/benchmarks/aggregate_single_site_metrics.ipynb
+++ b/benchmarks/aggregate_single_site_metrics.ipynb
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 56,
    "id": "f0f8d868-3789-42b5-8f7c-053b759e63a7",
    "metadata": {},
    "outputs": [],
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 57,
    "id": "9aa36c9f-07b3-4c32-a926-a09f0ee0aa6e",
    "metadata": {},
    "outputs": [],
@@ -116,9 +116,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9624ce82-b014-4d81-936b-421c383522ef",
+   "metadata": {},
+   "source": [
+    "## Clean STAN 1951 to 2019 metrics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "d5f09f9b-2237-488c-b8de-7c42deb74a82",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "STAN_metrics_1951_to_2019 = pd.read_csv('/glade/scratch/adamhb/processed_output/STAN_trans_1951_2019_111323_-17e2acb6a_FATES-8a054a12/ensemble_output_STAN_trans_1951_2019_111323_-17e2acb6a_FATES-8a054a12_with_fire_metrics.csv')\n",
+    "STAN_metrics_1951_to_2019 = STAN_metrics_1951_to_2019.sort_values(\"inst_id\")[CZ2_trans_metrics_cols]\n",
+    "STAN_PEAS_metrics.to_csv('STAN_TRANS_metrics.csv')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0b404412-2eb5-4bb7-ba61-c7553f31ea65",
+   "id": "a816d12f-f320-4ee0-abce-d2100bd876b3",
    "metadata": {},
    "outputs": [],
    "source": []
